--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Auction/_ViewAll.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Auction/_ViewAll.cshtml
@@ -1,5 +1,11 @@
 ﻿@model IEnumerable<OnlineArtGallery.Models.Auction>
-
+@{
+    User User = null;
+    if (ViewBag.User != null)
+    {
+        User = ViewBag.User;
+    }
+}
 <div class="row">
     <div class="col-12">
         <div class="card">
@@ -11,7 +17,7 @@
                                 Auction ID
                             </th>
                             <th>
-                                 Artwork
+                                Artwork
                             </th>
                             <th>
                                 BeginDay
@@ -31,46 +37,55 @@
                             <th>
                                 Active
                             </th>
-                            <th>
-                                @*<a onclick="showInPopup('@Url.Action("AddOrEdit", "Artwork", null, Context.Request.Scheme)', 'New Artwork')" class="btn btn-success btn-block"><i class="fas fa-plus"></i></a>*@
-                                <a href="/artwork/list" class="btn btn-success btn-block"><i class="fas fa-plus"></i></a>
-                            </th>
+                            @if (User != null && User.UsertypeId == 2)
+                            {
+                                <th>
+                                    @*<a onclick="showInPopup('@Url.Action("AddOrEdit", "Artwork", null, Context.Request.Scheme)', 'New Artwork')" class="btn btn-success btn-block"><i class="fas fa-plus"></i></a>*@
+                                    <a href="/artwork/list" class="btn btn-success btn-block"><i class="fas fa-plus"></i></a>
+                                </th>
+                            }
+
+
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model)
                         {
                             ViewBag.Active = item.Active ? "True" : "False";
-                        <tr>
-                            <td>
-                                @item.Id
-                            </td>
-                            <td>
-                                @item.Artwork.Name
-                            </td>
-                            <td>
-                                @item.BeginDay.ToString("dd/MM/yyyy")
-                            </td>
-                            <td>
-                                @item.EndDay.ToString("dd/MM/yyyy")
-                            </td>
-                            <td>
-                                @item.ReservePrice
-                            </td>
-                            <td>
-                                @item.StepPrice
-                            </td>
-                            <td>
-                                @item.Description
-                            </td>
-                            <td class="text-center">@ViewBag.Active</td>
-                            <td>
-                                <a onclick="showInPopup('@Url.Action("AddOrEdit", "Auction", new { item.Id }, Context.Request.Scheme)', 'Update Auction')" class="btn btn-info">@*<i class="fas fa-pencil-alt"></i>*@ Edit</a>
-                                <form asp-action="Delete" asp-route-id="@item.Id" onsubmit="return jQueryAjaxDelete(this);" class="d-inline">
-                                    <input type="submit" value="Delete" class="btn btn-danger" />
-                                </form>
-                            </td>
-                        </tr>
+                            <tr>
+                                <td>
+                                    @item.Id
+                                </td>
+                                <td>
+                                    @item.Artwork.Name
+                                </td>
+                                <td>
+                                    @item.BeginDay.ToString("dd/MM/yyyy")
+                                </td>
+                                <td>
+                                    @item.EndDay.ToString("dd/MM/yyyy")
+                                </td>
+                                <td>
+                                    @item.ReservePrice
+                                </td>
+                                <td>
+                                    @item.StepPrice
+                                </td>
+                                <td>
+                                    @item.Description
+                                </td>
+                                <td class="text-center">@ViewBag.Active</td>
+                                @if (User != null && User.UsertypeId == 2)
+                                {
+                                    <td>
+                                        <a onclick="showInPopup('@Url.Action("AddOrEdit", "Auction", new { item.Id }, Context.Request.Scheme)', 'Update Auction')" class="btn btn-info">@*<i class="fas fa-pencil-alt"></i>*@ Edit</a>
+                                        <form asp-action="Delete" asp-route-id="@item.Id" onsubmit="return jQueryAjaxDelete(this);" class="d-inline">
+                                            <input type="submit" value="Delete" class="btn btn-danger" />
+                                        </form>
+                                    </td>
+                                }
+
+                            </tr>
                         }
                     </tbody>
                 </table>
