--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeadPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/HeadPartial.cshtml
@@ -5,7 +5,10 @@
 
     <title>Art Shop</title>
 
-    <link rel="stylesheet" href="~/assetsIndex/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/assets/css/adminlte.min.css">
+    <link rel="stylesheet" href="~/assets/css/icheck-bootstrap.min.css">
+    @*<link rel="stylesheet" href="~/assetsIndex/css/bootstrap.min.css">*@
     <link rel="stylesheet" href="~/assetsIndex/css/all.min.css">
     <link rel="stylesheet" href="~/assetsIndex/css/animate.css">
     <link rel="stylesheet" href="~/assetsIndex/css/nice-select.css">
