--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/MainLayout.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/MainLayout.cshtml
@@ -28,9 +28,21 @@
     @Html.Partial("~/Views/UserLayout/HeaderTopPartial.cshtml")
     @Html.Partial("~/Views/UserLayout/CartPartial.cshtml")
 
-    <div>
-        @RenderBody()
+<div>
+    @RenderBody()
+    <div class="modal" tabindex="-1" id="form-modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                </div>
+            </div>
+        </div>
     </div>
+</div>
     @Html.Partial("~/Views/UserLayout/FooterPartial.cshtml")
     <!--============= Footer Section Ends Here =============-->
 
