--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
@@ -1,7 +1,11 @@
-﻿<script src="~/assetsIndex/js/jquery-3.3.1.min.js"></script>
+﻿<!-- jQuery -->
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<!-- Bootstrap 4 -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+@*<script src="~/assetsIndex/js/jquery-3.3.1.min.js"></script>*@
 <script src="~/assetsIndex/js/modernizr-3.6.0.min.js"></script>
 <script src="~/assetsIndex/js/plugins.js"></script>
-<script src="~/assetsIndex/js/bootstrap.min.js"></script>
+@*<script src="~/assetsIndex/js/bootstrap.min.js"></script>*@
 <script src="~/assetsIndex/js/isotope.pkgd.min.js"></script>
 <script src="~/assetsIndex/js/wow.min.js"></script>
 <script src="~/assetsIndex/js/waypoints.js"></script>
@@ -14,6 +18,7 @@
 <script src="~/assetsIndex/js/main.js"></script>
 <script src="/assetsIndex/js/lightbox-plus-jquery.min.js"></script>
 <script src="~/notification/ikr.notificationPlugin.js"></script>
+<script src="~/js/site.js" asp-append-version="true"></script>
 
 <script>
     window.onload = function () {
