--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Auction.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Auction.cshtml
@@ -75,7 +75,7 @@
                 <div class="col-sm-10 col-md-6 col-lg-4">
                     <div class="auction-item-2">
                         <div class="auction-thumb">
-                            <a href="/Index/auctiondetail"><img src="~/assets/img/artwork/@item.Artwork.Image" height="230" alt="product"></a>
+                            <a href="/Index/auctiondetail?auctionId=@item.Id"><img src="~/assets/img/artwork/@item.Artwork.Image" height="230" alt="product"></a>
                             <a href="#0" class="rating"><i class="far fa-star"></i></a>
                             <a href="#0" class="bid"><i class="flaticon-auction"></i></a>
                         </div>
