--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/MenuUserPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/MenuUserPartial.cshtml
@@ -1,19 +1,33 @@
 ﻿@using Newtonsoft.Json;
 @using Microsoft.AspNetCore.Http;
 
+@{
+    if (Context.Session.GetString("USER") != null)
+    {
+        ViewBag.USER = JsonConvert.DeserializeObject(Context.Session.GetString("USER"));
+    }
+}
 <div class="col-sm-10 col-md-7 col-lg-4">
     <div class="dashboard-widget mb-30 mb-lg-0 sticky-menu">
         <div class="user">
             <div class="thumb-area">
                 <div class="thumb">
-                    <img src="~/assetsIndex/images/dashboard/user.png" alt="user">
+                    @if (ViewBag.USER.Image == null)
+                    {
+                        <img src="~/assets/img/userImage/uservodanh.jpeg" alt="user">
+                    }
+                    else
+                    {
+                        <img src="~/assets/img/userImage/@ViewBag.USER.Image" alt="user">
+                    }
+
                 </div>
-                <label for="profile-pic" class="profile-pic-edit"><i class="flaticon-pencil"></i></label>
+                @*<label for="profile-pic" class="profile-pic-edit"><i class="flaticon-pencil"></i></label>*@
                 <input type="file" id="profile-pic" class="d-none">
             </div>
             <div class="content">
-                <h5 class="title"><a href="#0">Percy Reed</a></h5>
-                <span class="username">john@gmail.com</span>
+                <h5 class="title"><a href="#0">@ViewBag.USER.Name</a></h5>
+                <span class="username">@ViewBag.USER.Email</span>
             </div>
         </div>
         <ul class="dashboard-menu">
