--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
@@ -2,10 +2,10 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-@*<script src="~/assetsIndex/js/jquery-3.3.1.min.js"></script>*@
+<script src="~/assetsIndex/js/jquery-3.3.1.min.js"></script>
 <script src="~/assetsIndex/js/modernizr-3.6.0.min.js"></script>
 <script src="~/assetsIndex/js/plugins.js"></script>
-@*<script src="~/assetsIndex/js/bootstrap.min.js"></script>*@
+<script src="~/assetsIndex/js/bootstrap.min.js"></script>
 <script src="~/assetsIndex/js/isotope.pkgd.min.js"></script>
 <script src="~/assetsIndex/js/wow.min.js"></script>
 <script src="~/assetsIndex/js/waypoints.js"></script>
